[package]
name = "homebrew-usage-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Homebrew Usage Tracker Contributors"]
description = "A tool to track and manage homebrew packages based on usage"

[dependencies]
chrono = "0.4"
crossterm = "0.29.0"
color-eyre = "0.6.5"
ratatui = "0.29.0"
tracing = "0.1.41"
itertools = "0.14.0"
unicode-width = "0.2.0"
