[package]
name = "brewsweep"
version = "0.1.0"
edition = "2021"
authors = ["Rajendra Sharma <drudge.rajan@gmail.com>"]
license = "MIT"
description = "A fast, terminal-based Homebrew usuage tracker - clean up unused packages with ease"
readme = "README.md"
homepage = "https://github.com/DrudgeRajen/brewsweep"
repository = "https://github.com/DrudgeRajen/brewsweep"
keywords = ["homebrew", "tui", "terminal", "package-manager", "cleanup"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "demo.gif",
    ".github/",
    "screenshots/",
]

[[bin]]
name = "brewsweep"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
crossterm = "0.29.0"
color-eyre = "0.6.5"
ratatui = "0.29.0"
tracing = "0.1.41"
itertools = "0.14.0"
unicode-width = "0.2.0"
